--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,11 @@
 @import "tailwindcss";
+
+ul {
+  padding-left: 2rem;
+  list-style-type: disc;
+}
+
+ol {
+  padding-left: 2rem;
+  list-style-type: decimal;
+}
